Redis with docker file added